    - use arp to translate these ip's to mac addresses
    - use a consistent naming scheme to create nodeN hostnames
    - profit
  * usr/bin/orange-box-add-all-nodes:
    - we use AMT_PASSWORD so much, put it in .bashrc
  * usr/bin/orange-box-setup-maas:
    - deprecated;  all functionality subsumed into postinst/preinst
  * debian/preinst, usr/lib/orange-box/inc/squid.conf:
    - setup squid

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 12 Apr 2014 00:17:47 -0500

orange-box (1.3-0ubuntu1) trusty; urgency=medium

  * debian/postinst:
    - make sure we chown the .juju directory to the ubuntu user
  * usr/share/doc/orange-box/examples/openstack-simple/00-demo-prep.sh:
    - show the debug log and upload tools when bootstrapping, otherwise
      FUCKING juju has to go out to the internet to download itself,
      FOR FUCKS SAKE
  * debian/postinst:
    - set an admin secret so that we can log into the juju gui
  * debian/control:
    - add juju-deployer to the master node, makes deploying bundles
      much easier
  * === added directory home, === added directory home/ubuntu, === added
    directory home/ubuntu/.remmina, debian/postinst,
    home/ubuntu/.remmina/1397230159112.remmina,
    home/ubuntu/.remmina/1397232305030.remmina,
    home/ubuntu/.remmina/1397232322839.remmina,
    home/ubuntu/.remmina/1397232362406.remmina,
    home/ubuntu/.remmina/1397232390677.remmina,
    home/ubuntu/.remmina/1397232407533.remmina,
    home/ubuntu/.remmina/1397232435909.remmina,
    home/ubuntu/.remmina/1397232455068.remmina,
    home/ubuntu/.remmina/1397232472197.remmina,
    home/ubuntu/.remmina/remmina.pref, usr/share/doc/orange-
    box/examples/openstack-simple/havanaOB.yaml:
    - install a working set of VNC configs

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 12 Apr 2014 00:17:44 -0500

orange-box (1.2-0ubuntu1) trusty; urgency=medium

  * debian/postinst:
    - reorder the checking of maas services; region must be up first