@@ -1,4 +1,0 @@
-#!/bin/bash
-
-#Destroy everything
-juju destroy-environment -e maas
