@@ -2,6 +2,8 @@
 #
 # Ameet Paranjape, 2 April 2014
 
+set -x
+
 echo "Demo prep runtime is about 5 minutes"
 echo "checking for existing Juju environment..."
 juju status && echo "Existing deployment found, exiting." && exit
@@ -12,7 +14,7 @@ echo "No existing environment found, we are good to go."
 rm -rf ~/.ssh/known_hosts
 rm -rf ~/.juju/environments
 juju bootstrap --show-log --upload-tools
-echo "Waiting for bootstrap node to deploy (5 minutes)"
-sleep 300
-juju deploy --to 0 juju-gui
+#echo "Waiting for bootstrap node to deploy (5 minutes)"
+#sleep 300
+juju deploy --to 0 --repository=/srv/charmstore/ local:precise/juju-gui
 
